--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Adanna's Portfolio</title>
-	<link rel="stylesheet" href="main.css">
-</head>
-<body>
-	<div id="maindiv">
-		<div class="babydivs" id="div1">1</div>
-		<div class="babydivs" id="div2">2</div>
-		<div class="babydivs" id="div3">3</div>
-	</div>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="main.css">
+        <title>Adanna Resume</title>
+    </head>
+    <header>
+        <h1 id="name">Adanna Omatu</h1>
+    </header>
+    <body>
+        <div id="container">
+            <div class="columns" id="column1">
+                <nav>
+                    <a href="">About ME</a>
+                    <a href="">Hello World</a>
+                    <a href="">Bye World</a>
+                </nav>
+            </div>
+            <div class="columns" id="column2">
+                <div id="info-image1"
+                ></div>
+                <div id="info-image2"
+                >
+                    <h2>
+                        About Me
+                    </h2>
+                    <p>
+                        I am what some might call a jack of alla trades. If you can think it, I can build it. Check out my site and follow me on my journey to becoming a FullStack developer. Enjoy.
+                    </p>
+                </div>
+            </div>
+            <div class="columns" id="column3"></div>
+        </div>
+    </body>
+    <footer>
+        @AODesign 2017
+    </footer>
 </html>
-<!-- images and text should have own divs -->
