--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -5,6 +5,8 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,400i,600" rel="stylesheet">
+  <script src="../js/main.js" type="text/javascript">
+  </script>
 </head>
 <body>
   <div id="realSidenav" class="sidenav">
@@ -19,11 +21,11 @@
       </div>
     </div>
     <div id="menu-panel">
-      <div id="close">X</div>
-      <div id="menu-text">Menu</div>
+      <div id="ham-menu" onclick="navClick()"></div>
+      <div id="menu-text" onclick="navClick()">Menu</div>
     </div>
   </div>
-  <div id="main-Aboutme">
+  <div id="main-aboutme">
     <div id="header">
       <div id="main-logo">AO.</div>
       <div id="fb-logo">fb</div>
